--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Open+Sans:ital@0;1&family=Source+Sans+Pro&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css"/> <!-- swiper-->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/magnific-popup.js/1.1.0/magnific-popup.min.css" integrity="sha512-+EoPw+Fiwh6eSeRK7zwIKG2MA8i3rV/DGa3tdttQGgWyatG/SkncT53KHQaS5Jh9MNOT3dmFL0FjTY08And/Cw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/magnific-popup.js/1.1.0/magnific-popup.min.css" integrity="sha512-+EoPw+Fiwh6eSeRK7zwIKG2MA8i3rV/DGa3tdttQGgWyatG/SkncT53KHQaS5Jh9MNOT3dmFL0FjTY08And/Cw==" crossorigin="anonymous" referrerpolicy="no-referrer">
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
@@ -198,7 +198,7 @@
                                     <span class="content__title">SEE THE UNMATCHED BEAUTY OF THE GREAT.</span>
                                     <p class="content__text">Free directories: directories are perfect for customers that are searching for...</p>
                                     <div class="content__person">
-                                        <img class="content__person-avatar" src="./img/news/alja-brun.jpg" alt="avatar">
+                                        <img class="content__person-avatar" src="./img/news/alja-brun.jpg" alt="avatar" width="60" height="60">
                                         <div class="content__person-info">
                                             <div class="content__person-name">ALJA BRUN</div>
                                             <div class="content__person-data">20 Jan 2020</div>
@@ -219,7 +219,7 @@
                                     <span class="content__title">EFFECTIVE ADVERTISING POINTERS.</span>
                                     <p class="content__text">Having a home based business is a wonderful asset to your life...</p>
                                     <div class="content__person">
-                                        <img class="content__person-avatar" src="./img/news/dominic-freeman.jpg" alt="avatar">
+                                        <img class="content__person-avatar" src="./img/news/dominic-freeman.jpg" alt="avatar" width="60" height="60">
                                         <div class="content__person-info">
                                             <div class="content__person-name">DOMINIC FREEMAN</div>
                                             <div class="content__person-data">13 Dec 2019</div>
@@ -240,10 +240,52 @@
                                     <span class="content__title">HYPNOTIZE YOURSELF INTO THE GHOST.</span>
                                     <p class="content__text">There are many things that are important to catalog design...</p>
                                     <div class="content__person">
-                                        <img class="content__person-avatar" src="./img/news/alice-ward.jpg" alt="avatar">
+                                        <img class="content__person-avatar" src="./img/news/alice-ward.jpg" alt="avatar" width="60" height="60">
                                         <div class="content__person-info">
                                             <div class="content__person-name">ALICE WARD</div>
-                                            <div class="content__person-data"></div>
+                                            <div class="content__person-data">30 Nov 2019</div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="swiper-slide">
+                            <div class="swiper-slide__content content">
+                                <picture class="content__image">
+                                    <source media="(max-resolution: 1dppx)" srcset="./img/progects/mask-group-2.webp">
+                                    <source media="(max-resolution: 2dppx)" srcset="./img/progects/mask-group-2@2x.webp">
+                                    <source media="(max-resolution: 3dppx)" srcset="./img/progects/mask-group-2@3x.webp">
+                                    <img src="./img/progects/mask-group-2.jpg" alt="photo of bilding" width="370" height="240">
+                                </picture>
+                                <div class="content__wrapper">
+                                    <span class="content__title">HYPNOTIZE YOURSELF INTO THE GHOST.</span>
+                                    <p class="content__text">There are many things that are important to catalog design...</p>
+                                    <div class="content__person">
+                                        <img class="content__person-avatar" src="./img/news/alex-miller.jpg" alt="avatar" width="60" height="60">
+                                        <div class="content__person-info">
+                                            <div class="content__person-name">alex miller</div>
+                                            <div class="content__person-data">5 Nov 2018</div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="swiper-slide">
+                            <div class="swiper-slide__content content">
+                                <picture class="content__image">
+                                    <source media="(max-resolution: 1dppx)" srcset="./img/progects/mask-group-1.webp">
+                                    <source media="(max-resolution: 2dppx)" srcset="./img/progects/mask-group-1@2x.webp">
+                                    <source media="(max-resolution: 3dppx)" srcset="./img/progects/mask-group-1@3x.webp">
+                                    <img src="./img/progects/mask-group-1.jpg" alt="photo of bilding" width="370" height="240">
+                                </picture>
+                                <div class="content__wrapper">
+                                    <span class="content__title">HYPNOTIZE YOURSELF INTO THE GHOST.</span>
+                                    <p class="content__text">There are many things that are important to catalog design...</p>
+                                    <div class="content__person">
+                                        <img class="content__person-avatar" src="./img/news/jon-snow.png" alt="avatar" width="60" height="60">
+                                        <div class="content__person-info">
+                                            <div class="content__person-name">jon snow</div>
+                                            <div class="content__person-data">13 May 2021</div>
                                         </div>
                                     </div>
                                 </div>
