--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
-    <h1 class="visually-hidden">place for SEO</h1>
+    <h1 class="visually-hidden">Montichello - building company</h1>
     <header class="header">
         <div class="container">
             <a class="header__logo" href="#" aria-label="logo">
