--- a/index.html
+++ b/index.html
@@ -4,6 +4,24 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Primary Meta Tags -->
+    <title>Montichello - building company</title>
+    <meta name="title" content="Montichello - building company">
+    <meta name="description" content="WE MAKE THE WORLD BEAUTIFUL EVERYDAY">
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://kovarnar.github.io/Montichello/">
+    <meta property="og:title" content="Montichello - building company">
+    <meta property="og:description" content="WE MAKE THE WORLD BEAUTIFUL EVERYDAY">
+    <meta property="og:image" content="https://github.com/Kovarnar/Montichello/blob/master/img/news/image-3%402x.webp">
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:url" content="https://kovarnar.github.io/Montichello/">
+    <meta property="twitter:title" content="Montichello - building company">
+    <meta property="twitter:description" content="WE MAKE THE WORLD BEAUTIFUL EVERYDAY">
+    <meta property="twitter:image" content="https://github.com/Kovarnar/Montichello/blob/master/img/news/image-3%402x.webp">
     <title>Montichello</title>
     <link rel="icon" href="favicon.ico">
     <link rel="apple-touch-icon" sizes="57x57" href="./img/favicon/apple-icon-57x57.png">
