--- a/index.html
+++ b/index.html
@@ -14,14 +14,14 @@
     <meta property="og:url" content="https://kovarnar.github.io/Montichello/">
     <meta property="og:title" content="Montichello - building company">
     <meta property="og:description" content="WE MAKE THE WORLD BEAUTIFUL EVERYDAY">
-    <meta property="og:image" content="https://kovarnar.github.io/Montichello/img/news/image-3.jpg">
+    <meta property="og:image" content="https://github.com/Kovarnar/Montichello/tree/master/img/news/image-3.jpg">
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:url" content="https://kovarnar.github.io/Montichello/">
     <meta property="twitter:title" content="Montichello - building company">
     <meta property="twitter:description" content="WE MAKE THE WORLD BEAUTIFUL EVERYDAY">
-    <meta property="twitter:image" content="https://kovarnar.github.io/Montichello/img/news/image-3.gpg">
+    <meta property="twitter:image" content="https://github.com/Kovarnar/Montichello/tree/master/img/news/image-3.gpg">
     <title>Montichello</title>
     <link rel="icon" href="favicon.ico">
     <link rel="apple-touch-icon" sizes="57x57" href="./img/favicon/apple-icon-57x57.png">
