--- a/index.html
+++ b/index.html
@@ -14,14 +14,14 @@
     <meta property="og:url" content="https://kovarnar.github.io/Montichello/">
     <meta property="og:title" content="Montichello - building company">
     <meta property="og:description" content="WE MAKE THE WORLD BEAUTIFUL EVERYDAY">
-    <meta property="og:image" content="https://raw.githubusercontent.com/Kovarnar/Montichello/master/img/news/image-3.jpg">
+    <meta property="og:image" content="https://raw.githubusercontent.com/Kovarnar/Montichello/master/img/news/image-3%403x.webp">
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:url" content="https://kovarnar.github.io/Montichello/">
     <meta property="twitter:title" content="Montichello - building company">
     <meta property="twitter:description" content="WE MAKE THE WORLD BEAUTIFUL EVERYDAY">
-    <meta property="twitter:image" content="https://raw.githubusercontent.com/Kovarnar/Montichello/master/img/news/image-3.jpg">
+    <meta property="twitter:image" content="https://raw.githubusercontent.com/Kovarnar/Montichello/master/img/news/image-3%403x.webp">
     <title>Montichello</title>
     <link rel="icon" href="favicon.ico">
     <link rel="apple-touch-icon" sizes="57x57" href="./img/favicon/apple-icon-57x57.png">
@@ -159,7 +159,7 @@
                                 <source media="(max-resolution: 1dppx)" srcset="./img/progects/mask-group-1.webp">
                                 <source media="(max-resolution: 2dppx)" srcset="./img/progects/mask-group-1@2x.webp">
                                 <source media="(max-resolution: 3dppx)" srcset="./img/progects/mask-group-1@3x.webp">
-                                <img  class="projects__image-left" src="./img/progects/mask-group-1.jpg" alt="TRADE CENTER project" width="630" height="470">
+                                <img  class="projects__image-left" src="./img/progects/mask-group-1.jpg" alt="TRADE CENTER project" width="630" height="470"  loading="lazy">
                             </picture>
                         </div>
                         <div class="projects__content ">
@@ -181,7 +181,7 @@
                                 <source media="(max-resolution: 1dppx)" srcset="./img/progects/mask-group-2.webp">
                                 <source media="(max-resolution: 2dppx)" srcset="./img/progects/mask-group-2@2x.webp">
                                 <source media="(max-resolution: 3dppx)" srcset="./img/progects/mask-group-2@3x.webp">
-                                <img  class="projects__image-right" src="./img/progects/mask-group-2.jpg" alt="COMMERCE CENTRE project" width="630" height="470">
+                                <img  class="projects__image-right" src="./img/progects/mask-group-2.jpg" alt="COMMERCE CENTRE project" width="630" height="470"  loading="lazy">
                             </picture>
                         </div>
                         <div class="projects__content  projects__content--reverse">
@@ -210,7 +210,7 @@
                                     <source media="(max-resolution: 1dppx)" srcset="./img/news/image-1.webp">
                                     <source media="(max-resolution: 2dppx)" srcset="./img/news/image-1@2x.webp">
                                     <source media="(max-resolution: 3dppx)" srcset="./img/news/image-1@3x.webp">
-                                    <img src="./img/news/image-1.jpg" alt="photo of bilding" width="370" height="240">
+                                    <img src="./img/news/image-1.jpg" alt="photo of bilding" width="370" height="240"  loading="lazy">
                                 </picture>
                                 <div class="content__wrapper">
                                     <span class="content__title">SEE THE UNMATCHED BEAUTY OF THE GREAT.</span>
@@ -231,7 +231,7 @@
                                     <source media="(max-resolution: 1dppx)" srcset="./img/news/image-2.webp">
                                     <source media="(max-resolution: 2dppx)" srcset="./img/news/image-2@2x.webp">
                                     <source media="(max-resolution: 3dppx)" srcset="./img/news/image-2@3x.webp">
-                                    <img src="./img/news/image-2.jpg" alt="photo of bilding" width="370" height="240">
+                                    <img src="./img/news/image-2.jpg" alt="photo of bilding" width="370" height="240"  loading="lazy">
                                 </picture>
                                 <div class="content__wrapper">
                                     <span class="content__title">EFFECTIVE ADVERTISING POINTERS.</span>
@@ -252,7 +252,7 @@
                                     <source media="(max-resolution: 1dppx)" srcset="./img/news/image-3.webp">
                                     <source media="(max-resolution: 2dppx)" srcset="./img/news/image-3@2x.webp">
                                     <source media="(max-resolution: 3dppx)" srcset="./img/news/image-3@3x.webp">
-                                    <img src="./img/news/image-3.jpg" alt="photo of bilding" width="370" height="240">
+                                    <img src="./img/news/image-3.jpg" alt="photo of bilding" width="370" height="240"  loading="lazy">
                                 </picture>
                                 <div class="content__wrapper">
                                     <span class="content__title">HYPNOTIZE YOURSELF INTO THE GHOST.</span>
@@ -273,7 +273,7 @@
                                     <source media="(max-resolution: 1dppx)" srcset="./img/progects/mask-group-2.webp">
                                     <source media="(max-resolution: 2dppx)" srcset="./img/progects/mask-group-2@2x.webp">
                                     <source media="(max-resolution: 3dppx)" srcset="./img/progects/mask-group-2@3x.webp">
-                                    <img src="./img/progects/mask-group-2.jpg" alt="photo of bilding" width="370" height="240">
+                                    <img src="./img/progects/mask-group-2.jpg" alt="photo of bilding" width="370" height="240" loading="lazy">
                                 </picture>
                                 <div class="content__wrapper">
                                     <span class="content__title">HYPNOTIZE YOURSELF INTO THE GHOST.</span>
@@ -294,7 +294,7 @@
                                     <source media="(max-resolution: 1dppx)" srcset="./img/progects/mask-group-1.webp">
                                     <source media="(max-resolution: 2dppx)" srcset="./img/progects/mask-group-1@2x.webp">
                                     <source media="(max-resolution: 3dppx)" srcset="./img/progects/mask-group-1@3x.webp">
-                                    <img src="./img/progects/mask-group-1.jpg" alt="photo of bilding" width="370" height="240">
+                                    <img src="./img/progects/mask-group-1.jpg" alt="photo of bilding" width="370" height="240" loading="lazy">
                                 </picture>
                                 <div class="content__wrapper">
                                     <span class="content__title">HYPNOTIZE YOURSELF INTO THE GHOST.</span>
