--- a/index.html
+++ b/index.html
@@ -418,9 +418,9 @@
                                 From 07:05AM to 19:30PM
                             </li>
                         </ul>
-                        <form class="contact__form"  enctype="multipart/form-data" autocomplete="on"> <!-- method="post"  -->
+                        <form class="contact__form"  enctype="multipart/form-data" autocomplete="on" novalidate> <!-- method="post"  -->
                             <input class="contact__form-input" type="text" name="name" placeholder="Name">
-                            <input class="contact__form-input contact__form-input--email" type="text" name="email" placeholder="Email">
+                            <input class="contact__form-input" type="email" name="email" placeholder="Email">
                             <input class="contact__form-submit" type="submit" value="submit">
                         </form>
                     </div>
