--- a/index.html
+++ b/index.html
@@ -314,16 +314,16 @@
                         </div>
                     </div>
                     <div class="swiper-pagination"></div>
-                    <div class="swiper-button-prev">
-                        <svg class="icon">
-                            <use xlink:href="./img/sprite.svg#left"></use>
-                        </svg>
-                    </div>
-                    <div class="swiper-button-next">
-                        <svg class="icon">
-                            <use xlink:href="./img/sprite.svg#right"></use>
-                        </svg>
-                    </div>
+                </div>
+                <div class="swiper-button-prev">
+                    <svg class="icon">
+                        <use xlink:href="./img/sprite.svg#left"></use>
+                    </svg>
+                </div>
+                <div class="swiper-button-next">
+                    <svg class="icon">
+                        <use xlink:href="./img/sprite.svg#right"></use>
+                    </svg>
                 </div>
             </div>
         </section>
@@ -418,7 +418,7 @@
                                 From 07:05AM to 19:30PM
                             </li>
                         </ul>
-                        <form class="contact__form"  enctype="multipart/form-data" autocomplete="on" novalidate> <!-- method="post"  -->
+                        <form class="contact__form" method="post" enctype="multipart/form-data" autocomplete="on" novalidate>
                             <input class="contact__form-input" type="text" name="name" placeholder="Name">
                             <input class="contact__form-input" type="email" name="email" placeholder="Email">
                             <input class="contact__form-submit" type="submit" value="submit">
